Fixed gaps in bar charts

--- a/styles/chart_info.css
+++ b/styles/chart_info.css
@@ -21,7 +21,7 @@
 .selected-range > .range-to {
     transform: translateZ(0);
     display: inline-block;
-    animation-duration: .25s;
+    animation-duration: .2s;
 }
 
 .dark .chart-info > h1,
